# biteSnap

./: .flake8  .gitignore  README.md  REPORT.md  TESTING_REPORT.md  docker-compose.yml
.cursor/rules/: ci-cd.mdc
.github/workflows/: main.yml
backend/: .coveragerc  Dockerfile  manage.py  pytest.ini  requirements.txt  setup.cfg
backend/api/: filters.py  health.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/bitesnap/: asgi.py  settings.py  urls.py  wsgi.py
backend/recipes/: constants.py  models.py
backend/recipes/management/commands/: create_test_data.py  load_ingredients.py
backend/recipes/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_filters.py  test_management_commands.py  test_models.py  test_permissions.py  test_serializers.py
backend/tests/test_api/: test_health_endpoint.py  test_ingredient_endpoints.py  test_recipe_endpoints.py  test_tag_endpoints.py  test_user_endpoints.py
data/: ingredients.csv
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/api/: index.js
frontend/src/components/: index.js
frontend/src/components/account/: index.js  styles.module.css
frontend/src/components/account-menu/: index.js
frontend/src/components/button/: style.module.css
frontend/src/components/card/: index.js  style.module.css
frontend/src/components/checkbox/: index.js
frontend/src/configs/: navigation.js
frontend/src/pages/: index.js
frontend/src/utils/: index.js  recipe-management.js  validation.js
(+27 files in other folders)
