[metadata]
name = bitesnap
version = 1.0.0
description = BiteSnap Recipe Management System
author = Denis S.

[flake8]
max-line-length = 120
exclude =
    migrations,
    __pycache__,
    manage.py,
    settings.py,
    */migrations/*,
    */static/*,
    */media/*,
    venv,
    env

ignore = E203,W503,E501

[isort]
profile = django
line_length = 120
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations,venv,env

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

